2005-04-15  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS: New release
    * configure.in: Updated version number
    
2005-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: Change default key servers to ones
    that work.
    
2005-04-11  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-keyserver-control.c: Fix problems with 
    'Publish To' keyserver setting losing it's value when prefs
    dialog is shown. 
    * configure: Display a configuration summary
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.glade: Remove all key server operations
    when compiling without keyserver support.
    * plugins/nautilus/Makefile.am: Install capplet desktop file into both
    /usr/share/control-center-2.0/capplets and /usr/share/applications 
    (bug #172739)
    * src/seahorse-key-manager.glade: Added proper spacing around 'Filter:'
    * libseahorse/seahorse-prefs.c: Added back ASCII Armor option back with 
    proper option description.
    * libseahorse/seahorse-prefs.glade:
    * src/seahorse-key-manager.glade: Cleaned up glade files.
    
2005-04-06  Nate Nielsen  <nielsen@memberwebs.com>
    
    * data/seahorse.schemas.in: Fix typo (bug #172826)
    
2005-04-05  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-source.c: 
    * src/seahorse-key-source.h: Added method to import synchronously
    directly on a key source. 
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h: Added method to retrieve all keys
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-progress.glade:
    * libseahorse/seahorse-progress.h: Added support for progress windows
    on a given operation. 
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h: Reworked operation support 
    * data/seahorse.schemas.in: 
    * libseahorse/Makefile.am: 
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-keyserver-control.c: