@@ -1,3 +1,8 @@
+2005-04-16  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-check-button-control.c:
+    * libseahorse/seahorse-check-button-control.h: Add proper license
+    
 2005-04-15  Nate Nielsen  <nielsen@memberwebs.com>
 
     * NEWS: New release
